Alignment fix on page size filter

--- a/src/App.scss
+++ b/src/App.scss
@@ -124,6 +124,7 @@
 
 #page-size-filter {
   width: 200px;
+  text-align: right;
 }
 
 #account-filter {
